# Quadcopter-Manim-Slides

./: .gitignore  .manim-slides.toml  AGENTS.md  CLAUDE.md  GITHUB_AUTH.md  INSTALL.md  README.md  SETUP_GIT.md  SLIDES_PLAN.md  TODO.md  generate_html.py  main.py  pyproject.toml  requirements.txt  scenes.txt  slides.html  slides.toml
.codex/: README.md  settings.local.json
LaTex/: .gitignore  .refactor_manifest.json  ANALYSIS_RESULTS.md  CLAUDE.md  NOTATION_FIXES.md  latex-manifest.json  main.acn  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.ist  main.lof  main.lot  main.out  main.tex  main.tex.bak  main.toc  portada.tex  references.bib
draft/: 00_inertial_frame2.md  00_inertial_frame_update.md  01_newton_euler_update.md  01_newton_euler_update2.md  02_inertial_dynamics_update.md  02_inertial_dynamics_update2.md  03_quadcopter_motion_update.md  04_controllability_update.md  05_stability_update.md  06_quadcopter_linearization_update.md  08_mdp_update.md  09_q_learning.md  12_continuos_policy_update.md  12_continuous_policy_update.md  13_ilqr.md  13_ilqr_v2.md  14_ddpg.md  14_ddpg_update.md  15_gps.md  15_gps_update.md  17_conclusion.md  TEMPLATE.md
manimations/: pyproject.toml  requirements.txt
presentation/: 00_inertial_frame.html  00_portrait.html  01_newton_euler.html  02_inertial_dynamics.html  03_quadcopter_motion.html  08_msp.html  11_episode_return.html  11_policy_value.html  11_policy_values.html  12_continuous_policy.html  13_ilqr.html
slides/: 00_inertial_frame.py  00_portrait.py  01_newton_euler.py  02_inertial_dynamics.py  08_mdp.py  (+20 more)
(+73 files in other folders)
