[project]
name = "quadcopter-manim-slides"
version = "0.1.0"
description = "Animated presentation for dissertation on Quadcopter Control using Deep Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "manim>=0.18.0",
    "manim-slides>=5.5.3",
]

[dependency-groups]
dev = []
