[project]
name = "quadcopter-manim-slides"
version = "0.1.0"
description = "Animated presentation for dissertation on Quadcopter Control using Deep Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.10.0",
    "manim>=0.18.0",
    "manim-slides>=5.6.0",
    "openai>=2.24.0",
    "pyqt6>=6.10.2",
]

[dependency-groups]
dev = []
